# CRAG

./: .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
.streamlit/: config.toml
api/: main.py
crag/: __init__.py  config.py  evaluator.py  frontend_client.py  frontend_state.py  generator.py  grader.py  ingest.py  qdrant_store.py  refiner.py  retriever.py  rewriter.py
crag/graph/: __init__.py  graph.py  nodes.py  state.py
crag/tools/: __init__.py  web_search.py
evaluation/: __init__.py  dataset.py  ragas_eval.py
pages/: documents.py  query.py  system.py
scripts/: smoke_upload_query.py
test_data/: test.md
tests/: conftest.py  test_api_documents.py  test_config_url.py  test_grader.py  test_graph.py  test_ingest.py  test_rewriter.py
