[tool.poetry]
name = "crag-system"
version = "1.0.0"
description = "Self-Correcting RAG (CRAG) system with retrieval grading, query rewriting, and faithfulness evaluation"
authors = ["CRAG Team"]
readme = "README.md"
packages = [
    { include = "crag" },
    { include = "api" },
    { include = "evaluation" },
]

[tool.poetry.dependencies]
python = "^3.11"
langchain = ">=0.3.0,<0.4"
langgraph = ">=0.2.0,<0.4"
langchain-openai = ">=0.2.0,<0.4"
langchain-qdrant = ">=0.2.0,<0.4"
qdrant-client = ">=1.9.0,<2.0"
openai = ">=1.30.0,<2.0"
tavily-python = ">=0.5.0,<1.0"
ragas = ">=0.2.0,<0.3"
langfuse = ">=2.40.0,<3.0"
fastapi = ">=0.115.0,<1.0"
uvicorn = { version = ">=0.30.0,<1.0", extras = ["standard"] }
pydantic = ">=2.7.0,<3.0"
pydantic-settings = ">=2.3.0,<3.0"
python-dotenv = ">=1.0.0,<2.0"
datasets = ">=3.0.0,<4.0"
fastembed = ">=0.5.0,<1.0"
pypdf = ">=5.0.0,<6.0"
python-multipart = ">=0.0.9,<1.0"
langchain-text-splitters = ">=0.3.0,<1.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0,<9.0"
pytest-asyncio = ">=0.24.0,<1.0"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
